--- a/index.html
+++ b/index.html
@@ -1381,7 +1381,7 @@
             "personalInfo": {
                 "name": "Nouhaila Abbassi",
                 "title": "Full-Stack Developer & Digital Designer",
-                "email": "nuhailaabassi014@gmail.com",
+                "email": "nouhailaabassi014@gmail.com",
                 "location": "Tanger, Morocco"
             },
             "socialMedia": [
@@ -1619,3 +1619,4 @@
 </body>
 
 </html>
+
