update 2 for email

--- a/index.html
+++ b/index.html
@@ -1381,7 +1381,7 @@
             "personalInfo": {
                 "name": "Nouhaila Abbassi",
                 "title": "Full-Stack Developer & Digital Designer",
-                "email": "nouhailaabassi014@gmail.com",
+                "email": "nouhailaabbassi014@gmail.com",
                 "location": "Tanger, Morocco"
             },
             "socialMedia": [
@@ -1619,4 +1619,5 @@
 </body>
 
 </html>
+
 
